# Calqi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calc.cpp  parser.cpp  test_calqi  test_parser.cpp
docs/: calqi.1
parsers/: calculator_parser.cpp  calculator_parser.h
src/: calc.cpp  main.cpp
src/parsers/: calculator_parser.cpp  calculator_parser.h
src/utilities/: function_error_messages.h  function_validator.cpp  function_validator.h  math_constants.h  operator_error_messages.h  operator_list.h
tests/: test_calculator.cpp
utilities/: operator_list.h
